# dm-parser-sqllog

./: .gitignore  Cargo.toml  README.md  config.toml
dm-database-parser/: Cargo.toml
dm-database-parser/src/: error.rs  lib.rs  parser.rs  sqllog.rs  tools.rs
parser-sqllog/: Cargo.toml  config.toml
parser-sqllog/src/: lib.rs  logging.rs  main.rs  sqllog.rs
parser-sqllog/src/command/: cli.rs
parser-sqllog/src/config/: error_exporter.rs  file.rs  logging.rs  mod.rs  sqllog.rs
src/: error.rs  lib.rs  logging.rs  main.rs
src/command/: cli.rs
src/config/: error_exporter.rs  file.rs  logging.rs  mod.rs  sqllog.rs
tests/: test_config.rs
